--- a/debezium/debezium_alone/Dockerfile
+++ b/debezium/debezium_alone/Dockerfile
@@ -3,7 +3,7 @@ LABEL MAINTAINER="sunset.choe"
 
 # 환경 변수 설정
 ENV TZ=Asia/Seoul
-ENV BOOTSTRAP_SERVERS=localhost:9092
+ENV BOOTSTRAP_SERVERS=kafka:9092
 ENV GROUP_ID=mysql-source-connector-group
 ENV CONFIG_STORAGE_TOPIC=sunset_connect.configs
 ENV OFFSET_STORAGE_TOPIC=sunset_connect.offsets
