--- a/debezium/alone/Dockerfile
+++ b/debezium/alone/Dockerfile
@@ -5,7 +5,7 @@ LABEL MAINTAINER="sunset.choe"
 ENV TZ=Asia/Seoul
 ENV BOOTSTRAP_SERVERS=kafka:9092
 ENV GROUP_ID=mysql-source-connector-group
-ENV CONFIG_STORAGE_TOPIC=sunset_connect.configs
-ENV OFFSET_STORAGE_TOPIC=sunset_connect.offsets
-ENV STATUS_STORAGE_TOPIC=sunset_connect.statuses
+ENV CONFIG_STORAGE_TOPIC=sunset_connect_configs
+ENV OFFSET_STORAGE_TOPIC=sunset_connect_offsets
+ENV STATUS_STORAGE_TOPIC=sunset_connect_statuses
 ENV OFFSET_FLUSH_TIMEOUT_MS=60000
