--- a/debezium/compose/docker-compose.yml
+++ b/debezium/compose/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=debezium
       - MYSQL_PASSWORD=debeziumpw
-  debezium1:
+  connect1:
     image: debezium/connect:1.4
     networks:
       - debezium-docker-net
@@ -45,12 +45,15 @@ services:
     environment:
       - TZ=Asia/Seoul
       - BOOTSTRAP_SERVERS=kafka:9092
-      - GROUP_ID=mysql-source-connector-group
-      - CONFIG_STORAGE_TOPIC=sunset_connect_configs
-      - OFFSET_STORAGE_TOPIC=sunset_connect_offsets
-      - STATUS_STORAGE_TOPIC=sunset_connect_statuses
+      - GROUP_ID=connect-cluster-A
+      - CONFIG_STORAGE_TOPIC=connect.configs
+      - OFFSET_STORAGE_TOPIC=connect.offsets
+      - STATUS_STORAGE_TOPIC=connect.statuses
+      - CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR=1
+      - CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR=1
+      - CONNECT_STATUS_STORAGE_REPLICATION_FACTOR=1
       - OFFSET_FLUSH_TIMEOUT_MS=60000
-  debezium2:
+  connect2:
     image: debezium/connect:1.4
     networks:
       - debezium-docker-net
@@ -63,10 +66,13 @@ services:
     environment:
       - TZ=Asia/Seoul
       - BOOTSTRAP_SERVERS=kafka:9092
-      - GROUP_ID=mysql-source-connector-group
-      - CONFIG_STORAGE_TOPIC=sunset_connect_configs
-      - OFFSET_STORAGE_TOPIC=sunset_connect_offsets
-      - STATUS_STORAGE_TOPIC=sunset_connect_statuses
+      - GROUP_ID=connect-cluster-A
+      - CONFIG_STORAGE_TOPIC=connect.configs
+      - OFFSET_STORAGE_TOPIC=connect.offsets
+      - STATUS_STORAGE_TOPIC=connect.statuses
+      - CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR=1
+      - CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR=1
+      - CONNECT_STATUS_STORAGE_REPLICATION_FACTOR=1
       - OFFSET_FLUSH_TIMEOUT_MS=60000
 
 networks: 
