--- a/debezium/alone/Dockerfile
+++ b/debezium/alone/Dockerfile
@@ -4,8 +4,11 @@ LABEL MAINTAINER="sunset.choe"
 # 환경 변수 설정
 ENV TZ=Asia/Seoul
 ENV BOOTSTRAP_SERVERS=kafka:9092
-ENV GROUP_ID=mysql-source-connector-group
-ENV CONFIG_STORAGE_TOPIC=sunset_connect_configs
-ENV OFFSET_STORAGE_TOPIC=sunset_connect_offsets
-ENV STATUS_STORAGE_TOPIC=sunset_connect_statuses
+ENV GROUP_ID=connect-cluster-A
+ENV CONFIG_STORAGE_TOPIC=connect.configs
+ENV OFFSET_STORAGE_TOPIC=connect.offsets
+ENV STATUS_STORAGE_TOPIC=connect.statuses
+ENV CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR=1
+ENV CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR=1
+ENV CONNECT_STATUS_STORAGE_REPLICATION_FACTOR=1
 ENV OFFSET_FLUSH_TIMEOUT_MS=60000
